fix dark mode switch and add id for directory

--- a/client/src/components/Editor/Editor.less
+++ b/client/src/components/Editor/Editor.less
@@ -10,6 +10,9 @@
     overflow: auto;
     .shadow-box();
     border-radius: 15px;
+    .editor {
+      max-width: 100%;
+    }
   }
   #readonly-btn {
     position: absolute;
